--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -23,6 +27,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - run: echo ${{ github.actor }}
+      - run: echo ${{ secrets.GITHUB_TOKEN }}
+      - run: echo ${{ github.sha }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -35,6 +43,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/iris-api:latest
-            ghcr.io/${{ github.repository_owner }}/iris-api:${{ github.sha }}
+            ghcr.io/noface-9/iris-api:latest
+            ghcr.io/noface-9/iris-api:${{ github.sha }}
           file: ./Dockerfile
