--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Run lint (black check)
         run: |
           black --check .
-      - name: Run flake8
-        run: |
-          flake8 .
+      # - name: Run flake8
+      #   run: |
+      #     flake8 .
 
       - name: Run tests
         run: |
